<resources>
    <string name="app_name">WebAntTes</string>
    <string name="main">Главная</string>
    <string name="photo">Фото</string>
    <string name="profile">Профиль</string>
    <string name="search_photo_hint">Search</string>
    <string name="neww">New</string>
    <string name="popular">Popular</string>
    <string name="loading">Loading...</string>
    <string name="sorry">Sorry!</string>
    <string name="no_pictures">There is no pictures.\nPleace come back later.</string>
    <string name="edit">Edit</string>
</resources>